--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-988.1KB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-735.2KB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-678.8KB/s(Youtube:不良林), server: 38.75.136.102, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇫🇷 法国-879.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1010.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-988.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-735.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-678.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
       - 🇫🇷 法国-879.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1010.8KB/s(Youtube:不良林)
