--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-486.2KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-707.9KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-655.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-912.2KB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-671.5KB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 未知国家-1.52MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: su10.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su10.chaoxn.top}}
+  - {name: 未知国家-1.27MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-299.9KB/s(Youtube:不良林), server: su10.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su10.chaoxn.top}}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-486.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-707.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-671.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 未知国家-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 未知国家-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-299.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
